fgh/HMP-2: added some standards and security