@@ -1,53 +1,77 @@
 package studio.humpback.backend.exception;
 
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-import studio.humpback.backend.dto.ApiError;
-import studio.humpback.backend.dto.ApiResponse;
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatus;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import lombok.extern.slf4j.Slf4j;
+
+import studio.humpback.backend.dto.ApiResponse;
+import studio.humpback.backend.dto.ApiError;
+
+@Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
-    private static final Logger logger = LoggerFactory.getLogger(GlobalExceptionHandler.class);
-
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiResponse<?>> handleValidationExceptions(MethodArgumentNotValidException ex) {
-        logger.error("Validation error", ex.getMessage());
+    public ResponseEntity<ApiResponse<Void>> handleValidationException(MethodArgumentNotValidException ex) {
+        log.error("Validation error: {}", ex.getMessage());
 
-        List<String> errors = ex.getBindingResult()
+        List<String> validationErrors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .collect(Collectors.toList());
+                .map(fieldError -> fieldError.getField() + ": " + fieldError.getDefaultMessage())
+                .toList();
 
         ApiError apiError = ApiError.builder()
                 .timestamp(Instant.now())
                 .code(HttpStatus.BAD_REQUEST.value())
                 .message("Validation failed")
-                .details(errors)
+                .details(validationErrors)
                 .build();
 
-        return ResponseEntity.badRequest().body(ApiResponse.error(apiError));
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ApiResponse.error(apiError));
+    }
+
+    @ExceptionHandler(AuthenticationException.class)
+    public ResponseEntity<ApiResponse<Void>> handleAuthenticationException(AuthenticationException ex) {
+        log.error("Authentication error: {}", ex.getMessage());
+        return buildErrorResponse(HttpStatus.UNAUTHORIZED, "Authentication failed", ex.getMessage());
+    }
+
+    @ExceptionHandler(AuthorizationException.class)
+    public ResponseEntity<ApiResponse<Void>> handleAuthorizationException(AuthorizationException ex) {
+        log.error("Authorization error: {}", ex.getMessage());
+        return buildErrorResponse(HttpStatus.FORBIDDEN, "Authorization failed", ex.getMessage());
+    }
+
+    @ExceptionHandler(ResourceNotFoundException.class)
+    public ResponseEntity<ApiResponse<Void>> handleResourceNotFoundException(ResourceNotFoundException ex) {
+        log.error("Resource not found: {}", ex.getMessage());
+        return buildErrorResponse(HttpStatus.NOT_FOUND, "Resource not found", ex.getMessage());
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiResponse<?>> handleAllOtherExceptions(Exception ex) {
-        logger.error("Unexpected error", ex.getMessage());
+    public ResponseEntity<ApiResponse<Void>> handleGeneralException(Exception ex) {
+        log.error("Internal server error", ex);
+        return buildErrorResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Internal server error", ex.getMessage());
+    }
 
-        ApiError apiError = ApiError.builder()
+    private ResponseEntity<ApiResponse<Void>> buildErrorResponse(HttpStatus status, String message, String detail) {
+        ApiError error = ApiError.builder()
                 .timestamp(Instant.now())
-                .code(HttpStatus.INTERNAL_SERVER_ERROR.value())
-                .message("Internal server error")
-                .details(List.of(ex.getMessage()))
+                .code(status.value())
+                .message(message)
+                .details(Collections.singletonList(detail))
                 .build();
 
-        return ResponseEntity.internalServerError().body(ApiResponse.error(apiError));
+        return ResponseEntity.status(status).body(ApiResponse.error(error));
     }
 }
